--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,14 @@
 
 body {
   background: #EDEFF2;
+  height: 100%;
   font-family: 'Roboto', sans-serif;
 }
 
+.h-10vh {
+  height: 10vh;  
+}
+
+.h-90vh {
+  height: 90vh;
+}
